# MRM_HarshGandhi

./: README.md
Cashier_System_Workspace/install/: local_setup.sh  setup.sh
Cashier_System_Workspace/install/addition_service/lib/addition_service/: client  server
Cashier_System_Workspace/install/addition_service/share/addition_service/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
Cashier_System_Workspace/install/addition_service/share/addition_service/cmake/: addition_serviceConfig.cmake
Cashier_System_Workspace/install/cashier_system/include/cashier_system/cashier_system/msg/detail/: bill__functions.c  bill__traits.hpp  bill__type_support.cpp
Cashier_System_Workspace/install/cashier_system/lib/cashier_system/: bill_listener_node  bill_publisher_node  cashier_node
Cashier_System_Workspace/install/cashier_system/local/lib/python3.10/dist-packages/cashier_system/msg/: _bill.py
Cashier_System_Workspace/install/cashier_system/share/ament_index/resource_index/parent_prefix_path/: cashier_system
Cashier_System_Workspace/install/cashier_system/share/cashier_system/: package.sh
Cashier_System_Workspace/install/cashier_system/share/cashier_system/cmake/: cashier_system__rosidl_typesupport_cppExport.cmake  cashier_system__rosidl_typesupport_introspection_cExport.cmake  cashier_system__rosidl_typesupport_introspection_cppExport.cmake  export_cashier_system__rosidl_generator_cExport.cmake  export_cashier_system__rosidl_generator_cppExport.cmake  export_cashier_system__rosidl_generator_pyExport.cmake  export_cashier_system__rosidl_typesupport_fastrtps_cppExport.cmake
Cashier_System_Workspace/install/cashier_system/share/cashier_system/msg/: Bill.idl  Bill.msg
Cashier_System_Workspace/install/hello_world/lib/hello_world/: hello_node  price_subscriber  price_subscriber_node
Cashier_System_Workspace/install/hello_world/share/hello_world/: local_setup.sh  package.sh
Cashier_System_Workspace/install/hello_world/share/hello_world/cmake/: hello_worldConfig.cmake
Cashier_System_Workspace/install/my_new_package/lib/my_new_package/: my_new_package_node
Cashier_System_Workspace/install/my_new_package/share/my_new_package/: package.sh
Cashier_System_Workspace/install/tutorial_interfaces/share/tutorial_interfaces/: local_setup.sh  package.sh  package.xml
Cashier_System_Workspace/log/: latest_build
Cashier_System_Workspace/src/cashier_system/: CMakeLists.txt  README.MD  startupcommands
Cashier_System_Workspace/src/cashier_system/src/: bill_listener_node.cpp  bill_publisher_node.cpp  cashier_node.cpp
GitHub_task/: TASK 3.md
GitHub_task/C++ Course/C++ Course 1/Module 1/: exercise1.cpp  exercise2.cpp  exercise3.cpp  exercise4.cpp  exercise5.cpp
GitHub_task/C++ Course/C++ Course 1/Module 2/: exercise2.cpp  exercise3.cpp  exercise4.cpp  exercise5.cpp
GitHub_task/C++ Course/C++ Course 1/Module 3/: exercise1.cpp  exercise2.cpp  exercise3.cpp  exercise4.cpp  exercise5.cpp
GitHub_task/C++ Course/C++ Course 1/Module 4/: exercise1.cpp  exercise2.cpp  exercise3.cpp  exercise5.cpp
GitHub_task/C++ Course/C++ Course 2/Module 1/: exercise1.cpp  exercise2.cpp  exercise3.cpp  exercise4.cpp  exercise5.cpp
GitHub_task/C++ Course/C++ Course 2/Module 2/: exercise1.cpp  exercise2.cpp
GitHub_task/C++ Course/C++ Course 2/Module 3/: exercise1.cpp  exercise2.cpp  exercise3.cpp  exercise4.cpp  exercise5.cpp
GitHub_task/C++ Course/C++ Course 2/Module 4/: exercise1.cpp  exercise2.cpp  exercise3.cpp  exercise4.cpp  exercise5.cpp
GitHub_task/C++ Course/C++ Course 3/Module 1/: exercise1.cpp  exercise2.cpp  exercise3.cpp  exercise4.cpp  exercise5.cpp
GitHub_task/C++ Course/C++ Course 3/Module 2/: exercise1.cpp  exercise2.cpp  exercise3.cpp  exercise4.cpp  exercise5.cpp
GitHub_task/C++ Course/C++ Course 3/Module 3/: exercise1.cpp  exercise2.cpp  exercise3.cpp  exercise4.cpp  exercise5.cpp
GitHub_task/C++ Course/C++ Course 3/Module 4/: exercise1.cpp  exercise2.cpp  exercise3.cpp  exercise4.cpp  exercise5.cpp
rover_project_tas2/install/: local_setup.sh  setup.sh
rover_project_tas2/install/mobile_robot/install/mobile_robot/launch/: coordinate_input_launch.py  gazebo_launch.py
rover_project_tas2/install/mobile_robot/install/mobile_robot/model/: world.world
rover_project_tas2/install/mobile_robot/lib/mobile_robot/: coordinate_input_node  gps_subscriber  rover_control_node
rover_project_tas2/install/mobile_robot/share/mobile_robot/: package.sh  package.xml
rover_project_tas2/install/mobile_robot/share/mobile_robot/launch/: display.launch.py  gazebo.launch.py
rover_project_tas2/src/mobile_robot/: CMakeLists.txt
rover_project_tas2/src/mobile_robot/model/: rover.gazebo  rover.xacro
rover_project_tas2/src/mobile_robot/src/: coordinate_input_node.cpp  gps_subscriber.cpp  rover_control_node.cpp
